--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>Free bootstrap corporate template</title>
+    <title>Cornell Strategic Consulting</title>
     <!-- BOOTSTRAP STYLE SHEET -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!-- FONT AWESOME ICONS STYLE SHEET -->
@@ -49,20 +49,7 @@
     </div>
     <!-- NAVBAR CODE END -->
     <div id="home">
-        <div class="overlay">
-            <!-- overylay class usage -->
-            <div class="container">
-                <div class="col-md-8 col-md-offset-2 text-center">
-
-                    <h1>DESIGN AGENCY </h1>
-                    <h2>You Think, We Deliver </h2>
-                    <p class="p-cls">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    </p>
-                </div>
-
-            </div>
-        </div>
+        
 
     </div>
     <!--HOME SECTION END  -->
