changed some color themes and added structuring

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
         <div class="container">
             <div class="row text-center pad-bottom">
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">OUR SERVICES</h2>
+                    <h2 class="head-set">WHO WE ARE</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        Cornell Strategic Consulting (CSC) is a student led group with motivated, entrepreneurial, and passionate individuals who are not only interested in consulting but also want to make a difference in the Ithaca and Tompkins County Community through our consulting work and volunteer initiatives.
                     </p>
                 </div>
             </div>
@@ -68,15 +67,16 @@
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <i class="fa fa-recycle  fa-5x"></i>
-                    <h4 class="head-set">RESPONSIVE DESIGN</h4>
+                    <h4 class="head-set">DIVERSE</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-desktop  fa-5x"></i>
-                    <h4 class="head-set">EASY TO CUSTOMIZE </h4>
+                    <!--<i class="fa fa-desktop  fa-5x"></i>-->
+                    <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+                    <h4 class="head-set">PROFESSIONAL</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <i class="fa fa-bolt  fa-5x"></i>
-                    <h4 class="head-set">100% FREE TO USE</h4>
+                    <h4 class="head-set">ENTREPRENEURIAL</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
@@ -96,31 +96,29 @@
     <!--SERVICES SECTION END  -->
     <div class="parallax-like">
         <div class="overlay">
-
-
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-4">
                         <div>
-                            <strong>1300+</strong>
+                            <strong></strong>
                             <p>
-                                Projects
+                                FINANCE
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4">
                         <div>
-                            <strong>100+</strong>
+                            <strong></strong>
                             <p>
-                                Locations
+                                MARKETING
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 ">
                         <div>
-                            <strong>5000+</strong>
+                            <strong></strong>
                             <p>
-                                Employees
+                                STRATEGY
                             </p>
                         </div>
                     </div>
@@ -134,7 +132,7 @@
         <div class="container">
             <div class="row text-center pad-bottom">
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">OUR WORKS</h2>
+                    <h2 class="head-set">PROJECTS/CLIENT LOGOS HERE</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
@@ -181,7 +179,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-12">
-                        <h1>HERE IS BACKGROUND VEDIO</h1>
+                        <h1>APPLICATION WILL FOLD DOWN HERE</h1>
                         <h4>This scripts uses plugin <strong>jquery.mb.YTPlayer</strong>
 
                         </h4>
@@ -199,7 +197,7 @@
         <div class="container">
             <div class="row text-center ">
                 <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">OUR LOCATION</h2>
+                    <h2 class="head-set">MEMBER BIOS GO HERE</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                          Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
@@ -224,25 +222,14 @@
     <section id="clients">
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
-                <img src="assets/img/audio.png" alt="" class="img-responsive" />
-            </div>
-            <div class="col-md-3">
-                <img src="assets/img/codecanon.png" alt="" class="img-responsive" />
-            </div>
-            <div class="col-md-3">
-                <img src="assets/img/graphic.png" alt="" class="img-responsive" />
-            </div>
-            <div class="col-md-3">
-                <img src="assets/img/themeforest.png" alt="" class="img-responsive" />
-            </div>
+            <p>CONTACT INFORMATION HERE</p>
         </div>
 
     </div>
-        </section>
+    </section>
     <!-- CLIENTS SECTION END-->
     <footer>
-        © 2015 YourDomain.com  | <a href="http://www.designbootstrap.com/" target="_blank">by DesignBootstrap</a>
+        © 2015 Cornell Strategic Consulting
     </footer>
     <!-- FOOTER SECTION END-->
     <!-- REQUIRED SCRIPTS FILES -->
