--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="assets/img/vivaldi-logo.png" alt="" class="img-responsive" />
+                    <img src="assets/img/csc_short.png" alt="" class="img-responsive" />
                 </a>
             </div>
             <div class="navbar-collapse collapse navbar-right scroll-me">
@@ -66,7 +66,7 @@
             <div class="row text-center">
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-recycle  fa-5x"></i>
+                    <i class="fa fa-globe  fa-5x"></i>
                     <h4 class="head-set">DIVERSE</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -74,8 +74,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <!--<i class="fa fa-desktop  fa-5x"></i>-->
-                    <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+                    <i class="fa fa-briefcase  fa-5x"></i>
                     <h4 class="head-set">PROFESSIONAL</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -83,7 +82,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <i class="fa fa-bolt  fa-5x"></i>
+                    <i class="fa fa-line-chart  fa-5x"></i>
                     <h4 class="head-set">ENTREPRENEURIAL</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
