added some structure for member bios - look into doing them programmatically, probably from a database, instead of hardcoding

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <li><a href="#services">SERVICES</a></li>
                     <li><a href="#works">WORKS</a></li>
                     <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="https://www.facebook.com/CornellStrategicConsulting"><img src="assets/img/fb_logo.png"/></a></li>
                 </ul>
             </div>
 
@@ -96,7 +97,7 @@
     <div class="parallax-like">
         <div class="overlay">
             <div class="container">
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-lg-4 col-md-4 col-sm-4">
                         <div>
                             <strong></strong>
@@ -126,7 +127,7 @@
             </div>
         </div>
     </div>
-    <!--PARALLAX LIKE / STATS SECTION END  -->
+    <!-- BEGIN SERVICES -->
     <section id="works">
         <div class="container">
             <div class="row text-center pad-bottom">
@@ -165,8 +166,30 @@
                 </div>
             </div>
             
-            <div class="row text-center portfolio-item">
+            <hr>
 
+            <div id="clientlogos">
+                <h1>Our Previous Clients</h1>
+                <div class="row">
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/Rosie.png" /></div>
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/City_Raven.jpg"/></div>
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/Cola_Bolt.png"/></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/LEDM_Group.png"></div>
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/Wool_and_Prince.jpg"></div>
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/Worthy_Jerky.png"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/Fiberspark.png"></div>
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/Jekta_Box.png"></div>
+                    <div class="col-md-4 logo-wrapper"><img src="assets/img/project_logos/SPCA.png"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 logo-wrapper"><img src="assets/img/project_logos/Swidgit.png"></div>
+                    <div class="col-md-6 logo-wrapper"><img src="assets/img/project_logos/WSHRC.png"></div>
+                </div>
+            <!--
                 <div class="col-md-4 col-sm-4 ">
                     <div class="alert alert-info">
                         <img src="assets/img/1.jpg" class="img-responsive " alt="" />
@@ -194,18 +217,23 @@
                     </div>
 
                 </div>
+                -->
 
             </div>
         </div>
     </section>
+
+    <!-- END SERVICES SECTION -->
+
+
     <!--  ANALYST APPLICATION SECTION  -->
-    <div id="video-sec">
+    <div id="analyst-app">
         <!-- change https://www.youtube.com/watch?v=Ycv5fNd4AeM to your youtube url-->
         <div class="overlay">
             <div class="container">
-                <div class="row text-center" id="expandheader">
+                <div class="row text-center col-md-offset-1" id="expandheader">
                     <h1>Business Analyst Application</h1>
-                    <h3 id="expandinstructions">Click to expand</h3>
+                    <h3 id="expandinstructions">Click to open</h3>
                 </div>
                 <div class="col-md-1"> <!-- filler to push next div to the right -->
                 </div>
@@ -284,17 +312,43 @@
         </div>
 
     </div>
-    <!-- VIDEO SECTION END-->
-    <section id="contact">
+    <!-- ANALYST APPLICATION END-->
+
+
+    <!-- BEGIN MEMBER BIOS -->
+    <section id="bios">
         <div class="container">
-            <div class="row text-center ">
-                <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    <h2 class="head-set">MEMBER BIOS GO HERE (expand/collapse)</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                    </p>
-                    <br />
+            <div class="row">
+                <div class="row text-center">
+                    <h2 class="head-set">Our Members</h2>
+                </div>
+                <div id="member-bios-wrapper">
+                    <div id="member-bios-eboard">
+                        <div class="row">
+                            <div class="member-eboard col-md-4">
+                                <h3>Aidan Quest</h3>
+                                <h4>President</h4>
+                            </div>
+                            <div class="member-eboard col-md-4">
+                                <h3>Matthew "Chewy" Baumel</h3>
+                                <h4>VP-Internal</h4>
+                                <p>Matthew is a Junior majoring in Applied Economics and Management with concentrations in Finance and Strategy. In addition to being VP of Operations of CSC, he is a a commissioner on the SAFC, an investment analyst in FMGC in the TMT sector, and a brother of Sigma Alpha Mu. Matthew has worked with startup companies in AdMobilize and Ctrl X, and spent last summer working in community management at Quirky.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="member-bios-pm">
+                        <div class="row">
+
+                        </div>
+                    </div>
+                    <div id="member-bios-analysts">
+                        <div class="row">
+                            <div class="member-analyst col-md-4">
+                                <h3>Alexa Bernardini</h3>
+                                <p>Alexa is a sophomore from Jericho, NY majoring in Biology with a Dyson Business Minor for the Life Sciences.  She is interested in biological research and biotechnology consulting. This past summer, Alexa shadowed researchers in the Columbia University Cardiothoracic Surgery Research Lab. On campus she is president of Paint it Ourselves, a member of the On Tap dance troupe, and is a sister of Alpha Chi Omega.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
