--- a/index.html
+++ b/index.html
@@ -321,18 +321,15 @@
             <div class="row">
                 <div class="row text-center">
                     <h2 class="head-set">Our Members</h2>
+                    <h3>Coming Soon</h3>
                 </div>
+
                 <div id="member-bios-wrapper">
                     <div id="member-bios-eboard">
                         <div class="row">
                             <div class="member-eboard col-md-4">
-                                <h3>Aidan Quest</h3>
-                                <h4>President</h4>
                             </div>
                             <div class="member-eboard col-md-4">
-                                <h3>Matthew "Chewy" Baumel</h3>
-                                <h4>VP-Internal</h4>
-                                <p>Matthew is a Junior majoring in Applied Economics and Management with concentrations in Finance and Strategy. In addition to being VP of Operations of CSC, he is a a commissioner on the SAFC, an investment analyst in FMGC in the TMT sector, and a brother of Sigma Alpha Mu. Matthew has worked with startup companies in AdMobilize and Ctrl X, and spent last summer working in community management at Quirky.</p>
                             </div>
                         </div>
                     </div>
@@ -344,8 +341,6 @@
                     <div id="member-bios-analysts">
                         <div class="row">
                             <div class="member-analyst col-md-4">
-                                <h3>Alexa Bernardini</h3>
-                                <p>Alexa is a sophomore from Jericho, NY majoring in Biology with a Dyson Business Minor for the Life Sciences.  She is interested in biological research and biotechnology consulting. This past summer, Alexa shadowed researchers in the Columbia University Cardiothoracic Surgery Research Lab. On campus she is president of Paint it Ourselves, a member of the On Tap dance troupe, and is a sister of Alpha Chi Omega.</p>
                             </div>
                         </div>
                     </div>
